--- a/templates/characters.html
+++ b/templates/characters.html
@@ -125,18 +125,20 @@
                   <option value="Cleric" {% if character.class_type=="Cleric" %}selected{% endif %}>Cleric</option>
                 </select>
               </div>
+
               <div class="mb-3">
-                <label for="id_race" class="form-label">Class</label>
+                <label for="id_race" class="form-label">Race</label>
                 <select name="race" id="race" class="form-control">
                   <option value="">Select a race...</option>
-                  <option value="Human" {% if character.class_type=="Human" %}selected{% endif %}>Human</option>
-                  <option value="Dwarf" {% if character.class_type=="Dwarf" %}selected{% endif %}>Dwarf</option>
-                  <option value="Elf" {% if character.class_type=="Elf" %}selected{% endif %}>Elf</option>
-                  <option value="Orc" {% if character.class_type=="Orc" %}selected{% endif %}>Orc</option>
-                  <option value="Gnome" {% if character.class_type=="Gnome" %}selected{% endif %}>Gnome</option>
-                  <option value="Troll" {% if character.class_type=="Troll" %}selected{% endif %}>Troll</option>
+                  <option value="Human" {% if character.race=="Human" %}selected{% endif %}>Human</option>
+                  <option value="Dwarf" {% if character.race=="Dwarf" %}selected{% endif %}>Dwarf</option>
+                  <option value="Elf" {% if character.race=="Elf" %}selected{% endif %}>Elf</option>
+                  <option value="Orc" {% if character.race=="Orc" %}selected{% endif %}>Orc</option>
+                  <option value="Gnome" {% if character.race=="Gnome" %}selected{% endif %}>Gnome</option>
+                  <option value="Troll" {% if character.race=="Troll" %}selected{% endif %}>Troll</option>
                 </select>
               </div>
+
               <div class="col-md-3">
                 <label for="health" class="form-label">Health (HP)</label>
                 <input type="number" name="health" id="health" class="form-control"
